<resources>
    <string name="app_name">Trgovina</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="price">Price in EUR</string>
    <string name="description">Book description</string>
    <string name="save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="add">Add</string>
    <string name="year">Year of publishing</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
